Added Tomcat VM options settings