@@ -1,3 +1,7 @@
 7klick
 ======
-Testar
+Build root project which holds both common and profile module.
+
+Set Tomcat VM options to -Xms512m -Xmx2048m -XX:PermSize=256m -XX:MaxPermSize=512m
+
+Deploy on Tomcat
